chore(ruff): migrate to [lint], Dict->dict, remove bare except with logging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,12 @@
 [tool.ruff]
-# Максимальная длина строки
 line-length = 100
-
-# Проверки (E - pycodestyle, F - pyflakes, I - import order, UP - pyupgrade)
-select = ["E", "F", "I", "UP"]
-
-# Игнорируем:
-# - E501: длина строки (чтобы не мешал, если строка длиннее line-length)
-# - F403/F405: импорт через * (часто в aiogram FSM states)
-ignore = ["E501", "F403", "F405"]
-
-# Исключаем служебные директории
-exclude = [
-    ".venv",
-    "migrations",
-    "__pycache__",
-    "*.pyc"
-]
-
-# Авто-исправления
 fix = true
+exclude = [".venv", "migrations", "__pycache__", "*.pyc"]
 
-[tool.ruff.isort]
-# Настройка сортировки импортов
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
+ignore = ["E501", "F403", "F405", "C408"]  # C408 отключает навязывание frozenset, чтобы не трогать логику
+
+[tool.ruff.lint.isort]
 known-first-party = ["app"]
 combine-as-imports = true
