--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,72 @@
-/.venv
-/venv
-/__pycache__
+# Python
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
 *.pyd
-db.sqlite3
+*.pyo
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Ruff / linters
+.ruff_cache/
+_ruff_cache/
+
+# Virtual environments
+.env/
+.venv/
+venv/
+venv_new/
+ENV/
+env/
+
+# Local config & secrets
 .env
+.env.*.local
+config.local.py
+
+# Databases / runtime
+*.sqlite
+*.sqlite3
+*.db
+*.db-journal
 data/
-config.py
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
