--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Print meta
-        run: |
-          echo "Ref: $GITHUB_REF"
-          echo "SHA: $GITHUB_SHA"
+
+      - name: Deploy via SSH (git pull + docker compose)
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            set -e
+            cd "${SERVER_PATH:-/root/bots/kbju_bot}"
+
+            echo ">>> Git sync"
+            git fetch origin
+            git reset --hard origin/main
+
+            echo ">>> Docker compose up"
+            docker compose pull || true
+            docker compose build --no-cache bot
+            docker compose up -d
+
+            echo ">>> Status"
+            docker compose ps
+            docker compose logs -n 50 bot || true
