бновить конфигурацию и документацию

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ CHANNEL_URL=https://t.me/your_channel
 
 # Режим отладки
 DEBUG=False
+
+# Настройки админ-панели
+ADMIN_PASSWORD=your_secure_admin_password_here
+SECRET_KEY=your_secret_key_for_flask_sessions_here
