--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,12 @@
     "ruff.enable": false,
     "ruff.lint.enable": false,
     "ruff.format.enable": false,
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "cursorpyright.analysis.autoImportCompletions": true,
+    "cursorpyright.analysis.diagnosticSeverityOverrides": {
+        "reportAttributeAccessIssue": "none",
+        "reportOptionalMemberAccess": "none",
+        "reportUnnecessaryTypeIgnoreComment": "none"
+    },
+    "cursorpyright.analysis.typeCheckingMode": "basic"
 }
