--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,50 @@
+version: '3.8'
+
 services:
   bot:
-    build: .
-    image: kbju_bot-bot:latest            # <-- стабильный тег образа
-    container_name: kbju_bot-bot
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    image: kbju_bot:latest
+    container_name: kbju_bot
     restart: unless-stopped
-    pull_policy: if_not_present           # не тянуть лишний раз
-
     env_file:
       - .env
-
     volumes:
-      - kbju_sqlite:/app/data
-
+      - ./db.sqlite3:/app/db.sqlite3
+      - ./logs:/app/logs
     depends_on:
       postgres:
         condition: service_healthy
-
-    command: ["python", "run.py"]
-
-    # Лимитируем логи контейнера
-    logging:
-      driver: json-file
-      options:
-        max-size: "10m"
-        max-file: "3"
+    networks:
+      - bot_network
+    healthcheck:
+      test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   postgres:
-    image: postgres:15
-    container_name: kbju_bot-postgres
+    image: postgres:15-alpine
+    container_name: kbju_postgres
     restart: unless-stopped
-
-    env_file:
-      - .env
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-fitness_bot}
-      POSTGRES_USER: ${POSTGRES_USER:-bot_user}
+      POSTGRES_DB: ${POSTGRES_DB:-kbju_bot}
+      POSTGRES_USER: ${POSTGRES_USER:-kbju_user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-    ports:
-      - "5432:5432"
-
+    networks:
+      - bot_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-bot_user} -d ${POSTGRES_DB:-fitness_bot}"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-kbju_user}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-    # Лимитируем логи Postgres (они часто пухнут)
-    logging:
-      driver: json-file
-      options:
-        max-size: "20m"
-        max-file: "5"
+networks:
+  bot_network:
+    driver: bridge
 
 volumes:
   postgres_data:
-  kbju_sqlite:
