Refine lead notifications and admin config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Конфигурация Telegram бота
 BOT_TOKEN=your_bot_token_here
+ADMIN_CHAT_ID=310151740
 
 # URL базы данных (SQLite по умолчанию)
 DB_URL=sqlite+aiosqlite:///db.sqlite3
@@ -16,3 +17,4 @@ DEBUG=False
 # Настройки админ-панели
 ADMIN_PASSWORD=your_secure_admin_password_here
 SECRET_KEY=your_secret_key_for_flask_sessions_here
+
