--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Конфигурация Telegram бота
 BOT_TOKEN=your_bot_token_here
 
+# ID администратора (Telegram ID)
+ADMIN_CHAT_ID=
+
 # URL базы данных (SQLite по умолчанию)
 DB_URL=sqlite+aiosqlite:///db.sqlite3
 
