--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 BOT_TOKEN=your_bot_token_here
 ADMIN_CHAT_ID=310151740
 
+# ID администратора (Telegram ID)
+ADMIN_CHAT_ID=
+
 # URL базы данных (SQLite по умолчанию)
 DB_URL=sqlite+aiosqlite:///db.sqlite3
 
