Fix startup after merge conflicts

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,18 @@
-# Конфигурация Telegram бота
-BOT_TOKEN=your_bot_token_here
-ADMIN_CHAT_ID=310151740
+# Telegram bot configuration
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+ADMIN_CHAT_ID=123456789
 
-# ID администратора (Telegram ID)
-ADMIN_CHAT_ID=
+# Database URL (SQLite by default)
+DB_URL=sqlite+aiosqlite:///data/db.sqlite3
 
-# URL базы данных (SQLite по умолчанию)
-DB_URL=sqlite+aiosqlite:///db.sqlite3
-
-# Webhook для интеграции с n8n (оставьте пустым для тестирования)
+# Optional integrations
 N8N_WEBHOOK_URL=
-
-# URL канала
+N8N_WEBHOOK_SECRET=
 CHANNEL_URL=https://t.me/your_channel
 
-# Режим отладки
+# Runtime options
 DEBUG=False
 
-# Настройки админ-панели
+# Admin panel
 ADMIN_PASSWORD=your_secure_admin_password_here
 SECRET_KEY=your_secret_key_for_flask_sessions_here
-
