Add admin command to browse started leads

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Telegram bot configuration
 TELEGRAM_BOT_TOKEN=your_bot_token_here
+# Required for admin commands (e.g. /all_leads)
 ADMIN_CHAT_ID=123456789
 
 # Database URL (SQLite by default)
