--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ CHANNEL_URL=https://t.me/your_channel
 
 # Runtime options
 DEBUG=False
+STALLED_REMINDER_DELAY_MIN=120
 
 # Admin panel
 ADMIN_PASSWORD=your_secure_admin_password_here
