Add subscription gate before KBJU flow

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,12 @@ DB_URL=sqlite+aiosqlite:///data/db.sqlite3
 # Optional integrations
 N8N_WEBHOOK_URL=
 N8N_WEBHOOK_SECRET=
-CHANNEL_URL=https://t.me/your_channel
+
+# Проверка подписки на канал
+ENABLE_SUBSCRIPTION_GATE=true
+CHANNEL_URL=https://t.me/NickFitBlog
+CHANNEL_ID_OR_USERNAME=@NickFitBlog
+ALLOW_GATE_FALLBACK_PASS=false
 
 # Runtime options
 DEBUG=False
