Fix stalled reminder configuration loading

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ ALLOW_GATE_FALLBACK_PASS=false
 
 # Runtime options
 DEBUG=False
+ENABLE_STALLED_REMINDER=true
+# После изменения значений в .env перезапустите процесс бота
 STALLED_REMINDER_DELAY_MIN=120
 ENABLE_HOT_LEAD_ALERTS=true
 
