Add inactivity drip follow-ups

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,13 @@ ENABLE_STALLED_REMINDER=true
 STALLED_REMINDER_DELAY_MIN=120
 ENABLE_HOT_LEAD_ALERTS=true
 
+# Догоняющие кейсы по неактивности
+ENABLE_DRIP_FOLLOWUPS=false
+DRIP_CHECK_INTERVAL_SEC=600
+DRIP_24H_MIN=1440
+DRIP_48H_MIN=2880
+DRIP_72H_MIN=4320
+
 # Admin panel
 ADMIN_PASSWORD=your_secure_admin_password_here
 SECRET_KEY=your_secret_key_for_flask_sessions_here
