Refactor follow-ups and remove legacy lead priorities

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,32 @@
-# Telegram bot configuration
-TELEGRAM_BOT_TOKEN=your_bot_token_here
-# Required for admin commands (e.g. /all_leads)
+# Telegram bot credentials
+TELEGRAM_BOT_TOKEN=0000000000:REPLACE_ME
 ADMIN_CHAT_ID=123456789
 
-# Database URL (SQLite by default)
+# Database connection (SQLite by default)
 DB_URL=sqlite+aiosqlite:///data/db.sqlite3
 
-# Optional integrations
+# Subscription gate
+ENABLE_SUBSCRIPTION_GATE=true
+CHANNEL_URL=
+CHANNEL_ID_OR_USERNAME=
+ALLOW_GATE_FALLBACK_PASS=false
+
+# Webhook integration with n8n
 N8N_WEBHOOK_URL=
 N8N_WEBHOOK_SECRET=
 
-# Проверка подписки на канал
-ENABLE_SUBSCRIPTION_GATE=true
-CHANNEL_URL=https://t.me/NickFitBlog
-CHANNEL_ID_OR_USERNAME=@NickFitBlog
-ALLOW_GATE_FALLBACK_PASS=false
-
-# Runtime options
-DEBUG=False
+# Feature toggles
+ENABLE_DRIP_FOLLOWUPS=true
 ENABLE_STALLED_REMINDER=true
-# После изменения значений в .env перезапустите процесс бота
-STALLED_REMINDER_DELAY_MIN=120
 ENABLE_HOT_LEAD_ALERTS=true
+DEBUG=false
 
-# Догоняющие кейсы по неактивности
-ENABLE_DRIP_FOLLOWUPS=false
+# Drip follow-up scheduler
 DRIP_CHECK_INTERVAL_SEC=600
-DRIP_24H_MIN=1440
-DRIP_48H_MIN=2880
-DRIP_72H_MIN=4320
+DRIP_STAGE_1_MIN=60
+DRIP_STAGE_2_MIN=1440
+DRIP_STAGE_3_MIN=2880
+DRIP_STAGE_4_MIN=4320
 
-# Admin panel
-ADMIN_PASSWORD=your_secure_admin_password_here
-SECRET_KEY=your_secret_key_for_flask_sessions_here
+# Reminder for unfinished calculations
+STALLED_REMINDER_DELAY_MIN=120
